--- a/config/database.yml
+++ b/config/database.yml
@@ -1,7 +1,7 @@
 development:
   adapter: postgresql
   encoding: utf8
-  database: sharplink
+  database: haobanji_development
   pool: 5
   host: 127.0.0.1
   username: postgres
@@ -20,7 +20,7 @@ test:
 production:
   adapter: postgresql
   encoding: utf8
-  database: welink_im
+  database: haobanji
   pool: 5
   host: 127.0.0.1
   username: postgres
