--- a/config/database.yml
+++ b/config/database.yml
@@ -1,7 +1,7 @@
 development:
   adapter: postgresql
   encoding: utf8
-  database: haobanji_development
+  database: haobanji
   pool: 5
   host: 127.0.0.1
   username: postgres
