add jquery upload library

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -72,3 +72,6 @@ post:
     note: 'note'
     bookmark: 'bookmark'
     video: 'video'
+    audio: 'audio'
+    document: 'document'
+    album: 'album'
