--- a/config/database.yml
+++ b/config/database.yml
@@ -4,8 +4,8 @@ development:
   database: app_development
   pool: 5
   host: 127.0.0.1
-  username: postgres
-  password: 123456
+  username: frank
+  password: frank123
 
 
 # Warning: The database defined as "test" will be erased and
