--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,11 +1,45 @@
+upstream sharp_demo_backend {
+  server unix:/tmp/.unicorn.sock.1;
+  server unix:/tmp/.unicorn.sock.2;
+}
+ 
 server {
-    listen  80;
-    server_name  haobanji.com;
-    root   /opt/web/sharp_group/public;
-    access_log  /opt/web/sharp_group/log/access.log;
-    passenger_enabled on;
+  listen  80;
+  server_name  skilleye.net;
+  root   /opt/web/sharp_demo/public;
+  access_log  /opt/web/sharp_demo/log/access.log;
+  passenger_enabled on;
+  location ~* ^/(assets|uploads)/ { 
+    root /opt/web/sharp_demo/public;
+    gzip_static on; # to serve pre-gzipped version
+    expires max;
+    add_header Cache-Control public;
+    #add_header Last-Modified "";
+    #add_header ETag "";
+    break;
+  }
+  location /robots.txt {
+    alias /opt/web/sharp_demo/public/robots.txt;
+  } 
+
+  location = /favicon.ico {
+    expires max;
+    add_header Cache-Control public;
+  }
+
+  location / {
+    proxy_redirect     off;
+    proxy_set_header   Host $host;
+    proxy_set_header   X-Forwarded-Host $host;
+    proxy_set_header   X-Forwarded-Server $host;
+    proxy_set_header   X-Real-IP        $remote_addr;
+    proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
+    proxy_buffering    on;
+    proxy_pass         http://sharp_demo_backend;
+  }
+
 }
 server {
-    server_name  www.haobanji.com;
-    rewrite ^(.*) http://haobanji.com$1 permanent;
+  server_name  www.skilleye.net;
+  rewrite ^(.*) http://skilleye.net$1 permanent;
 }
