--- a/config/database.yml
+++ b/config/database.yml
@@ -1,27 +1,30 @@
 development:
   adapter: postgresql
   encoding: utf8
-  database: app
+  database: sharp_demo_dev
   pool: 5
   host: 127.0.0.1
-  username: postgres
-  password: 123456
+  username: frank
+  password: frank123
 
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: sqlite3
-  database: db/test.sqlite3
+  adapter: postgresql
+  encoding: utf8
+  database: sharp_demo_test
   pool: 5
-  timeout: 5000
+  host: 127.0.0.1
+  username: frank
+  password: frank123
 
 production:
   adapter: postgresql
   encoding: utf8
-  database: app_production
+  database: sharp_demo_pro
   pool: 5
   host: 127.0.0.1
-  username: postgres
-  password: 123456
+  username: frank
+  password: frank123
